# dreamai_2.0.9

./: .gitignore  EXP.ipynb  pyproject.toml
JOB/: final_job_app.py  job_code.py  job_exp.ipynb
UI/: fastui_1.py  panel_1.ipynb
VU/: app.py  app_topics.json  code_prompt.txt  codility.ipynb  free_exp.ipynb  graph_app.py  math_102.txt  math_102_JUNE_13_prerequisites.json  math_102_JUNE_13_questions.json  math_102_JUNE_13_topics_df.csv  math_102_JUNE_13_topics_df.json  math_102_app_questions.json  math_102_app_topics.json  math_102_created_questions_may_16.json  math_102_created_questions_may_8.json  math_102_created_topics_may_16.json  math_102_created_topics_may_26.csv  math_102_created_topics_may_26.json  math_102_created_topics_may_8.json  math_102_final_topics.json  math_102_final_topics_may_16.json  math_102_final_topics_may_8.json  math_102_latest_topics_may_26.json  math_102_latest_topics_may_30.json  math_102_may_1_topics.json  math_102_may_4_topics.json  math_102_may_4_valid_questions.json  math_102_may_5_questions.json  math_102_may_5_topics.json  math_102_may_6_questions.json  math_102_may_6_topics.json  math_102_new_questions_may_26.json  math_102_prerequisities_may_26.json  math_102_prerequisities_may_30.json  math_102_topics.json  panel_topics.json  react.py  react2.py  rx_bind.py  schema.py  (+19 more)
dreamai/: ai.py  chroma.py  utils.py
podcast/: [20240318]#419_–_Sam_Altman_OpenAI_GPT-5_Sora_Board_Saga_Elon_Musk_Ilya_Power_&_AGI.rttm  [20240318]#419_–_Sam_Altman_OpenAI_GPT-5_Sora_Board_Saga_Elon_Musk_Ilya_Power_&_AGI_medium.txt  app.py  config.json  pod_ai.ipynb  (+3 more)
